<resources>
    <!--Log in page strings-->
    <!--Register page strings-->
    <string name="app_name">HF</string>
    <string name="backgroundimage">BACKGROUNDIMAGE</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="noAccount">Dont Have an Account?</string>
    <string name="register">REGISTER</string>
    <string name="or">or</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="sign_up_google">Sign Up With Google</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>


    <!--main page strings-->
    <string name="userDistance"> Distance </string>
    <string name="waterText">water</string>
    <string name="waterButton">500ML</string>
    <string name="foodText">food</string>
    <string name="foodButton">food</string>\
    <string name="dailyText">daily check in</string>
    <string name="dailyButton">+</string>
    <string name="menuText">Menu</string>
    <string name="submit">submit</string>
    <string name="waterIntake">ml</string>
    <string name="foodIntake">cal</string>

    <!--menu page strings-->
    <string name="Workouts">Workout Exercises</string>
    <string name="Routine">Workout Routine</string>
    <string name="CIC">Calorie Intake Calculator</string>
    <string name="playlist">Workout Playlist</string>
    <string name="Pedometer">Pedometer</string>
    <string name="logoutbtn">Log out</string>


    <!--    -->
    <string name="player">Player</string>
    <string name="songName">Song Name</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="artistName">Artist Name</string>

    <string-array name="Exercises">
        <item>BenchPress</item>
        <item>DeadLift</item>
        <item>PushPress</item>
        <item>LegPress</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="foodData">Logs </string>
    <string name="home">Home</string>
    <string name="steps"> Steps taken: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>