<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_Workout"
            android:icon="@drawable/ic_directions_run"
            android:title="@string/Workouts" />

        <item
            android:id="@+id/nav_Player"
            android:icon="@drawable/ic_music_note"
            android:title="@string/player" />

        <item
            android:id = "@+id/nav_list"
            android:icon="@drawable/ic_view_list"
            android:title="@string/foodData" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logoutbtn" />




    </group>
</menu>