<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuPage">

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="524dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuText"
            android:textColor="@color/purple_200"
            android:textSize="45sp"  />

        <Button
            android:id="@+id/workexer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Workouts"
            android:background="@color/button_colors"
            android:textSize="20sp"  />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Routine"
            android:layout_marginTop="10dp"
            android:background="@color/button_colors"
            android:textSize="20sp"  />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:layout_marginTop="10dp"
            android:background="@color/button_colors"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pedometer"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:background="@color/button_colors" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/button_colors"
            android:text="@string/CIC"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>