<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".loginPage">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/background"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>


    <LinearLayout
        android:layout_width="272dp"
        android:layout_height="330dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79">

        <TextView
            android:id="@+id/logintext"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:shadowColor="#FFFFFF"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/purple_200" />

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="270dp"
            android:layout_height="wrap_content"

            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/button_colors"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noAccount"
            android:textColor="#ccc" />

        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/button_colors"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textboxOr"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#ccc" />

        <Button
            android:id="@+id/google_login_button"
            android:layout_width="270dp"
            android:layout_height="36dp"
            android:background="@color/button_colors"
            android:tag="google_login_button"
            android:text="@string/sign_in_google">

        </Button>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />


</androidx.constraintlayout.widget.ConstraintLayout>