<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangles"
    tools:context=".SpotifyPlayer">


    <View
        android:id="@+id/viewSupportForBackground"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/layoutPlayer"
        app:layout_constraintStart_toStartOf="@id/layoutPlayer"
        app:layout_constraintTop_toTopOf="@id/layoutPlayer"
        />

    <View
        android:id = "@+id/viewSupportForAlbumArt"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/viewSupportForAlbumArt"
        app:layout_constraintEnd_toStartOf="@id/viewSupportForAlbumArt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/viewSupportForBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1"/>




    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/artImg"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:src = "@drawable/logo_white"
        app:layout_constraintBottom_toBottomOf="@id/viewSupportForAlbumArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewSupportForAlbumArt"
        app:riv_corner_radius = "12dp"/>



    <TextView
        android:id = "@+id/txtNowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/nowPlaying"
        android:textColor="@color/purple_200"
        android:textSize = "18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id = "@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:background="@drawable/player_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id = "@+id/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/player"
            android:textAllCaps="true"
            android:textColor="@color/purple_200"
            android:textSize = "15sp"
            android:textStyle = "bold"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id = "@+id/playPauseBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/play_pause_button_background"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src = "@drawable/ic_play"
            android:tint = "@color/white"
            app:layout_constraintBottom_toTopOf="@+id/player"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id = "@+id/prevBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/next_prev_btn_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src = "@drawable/ic_previous"
            android:tint = "@color/black"
            app:layout_constraintBottom_toBottomOf="@id/playPauseBtn"
            app:layout_constraintEnd_toStartOf="@id/playPauseBtn"
            app:layout_constraintTop_toTopOf="@id/playPauseBtn" />

        <ImageButton
            android:id = "@+id/nextBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/next_prev_btn_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src = "@drawable/ic_next"
            android:tint = "@color/black"
            app:layout_constraintBottom_toBottomOf="@id/playPauseBtn"
            app:layout_constraintStart_toEndOf="@id/playPauseBtn"
            app:layout_constraintTop_toTopOf="@id/playPauseBtn" />

        <ImageButton
            android:id = "@+id/shuffleBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src = "@drawable/ic_shuffle"
            android:tint = "@color/black"
            app:layout_constraintBottom_toBottomOf="@id/playPauseBtn"
            app:layout_constraintStart_toStartOf= "parent"
            app:layout_constraintTop_toTopOf="@id/playPauseBtn" />

        <ImageButton
            android:id = "@+id/repeatBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src = "@drawable/ic_repeat"
            android:tint = "@color/black"
            app:layout_constraintBottom_toBottomOf="@id/playPauseBtn"
            app:layout_constraintEnd_toEndOf= "parent"
            app:layout_constraintTop_toTopOf="@id/playPauseBtn" />


        <TextView
            android:id = "@+id/artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:gravity="left"
            android:text="@string/artistName"
            android:textColor="@color/purple_200"
            android:textSize = "18sp"
            app:layout_constraintBottom_toTopOf="@id/playPauseBtn"/>


        <TextView
            android:id = "@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/songName"
            android:textColor="@color/purple_200"
            android:textSize = "22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>